# furball

./: .eslintrc.js  .gitignore  README.md  bun.lockb  index.html  node_modules.bun  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  _global.d.ts  const.ts  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/process/: bundle.rs  gif.rs  images.rs  inspect.rs  mod.rs  utils.rs  videos.rs
src/components/: Button.tsx  Modal.tsx  Portal.tsx  Spinner.tsx
src/components/Form/: Field.tsx  FieldTItle.tsx  Input.tsx  Radio.tsx  Switch.tsx
src/components/Icons/: Base.tsx  ChevronLeft.tsx  Close.tsx  Config.tsx  File.tsx  Film.tsx  Folder.tsx  Photo.tsx  Refresh.tsx  Swap.tsx
src/hooks/: useDarkMode.ts
src/models/: config.ts  dark.ts  file.ts  mode.ts
src/pages/: Credit.tsx  DropArea.tsx  EmptyStatus.tsx  index.tsx
src/pages/Config/: DirConfig.tsx  GeneralConfig.tsx  ImageConfig.tsx  index.tsx  useConfigForm.ts
src/pages/FileArea/: FileHeader.tsx  FileList.tsx  FooterInfo.tsx  Preview.tsx  index.tsx
src/pages/FileArea/ProcessConfig/: DirConfig.tsx  GeneralConfig.tsx  ImageConfig.tsx  index.tsx  useConfigForm.ts
src/styles/: GlobalStyle.tsx  mixins.ts  static.ts
src/styles/theme/: dark.ts  light.ts
src/utils/: arrayToMap.ts  getFileMeta.ts  parseFileSize.ts  process.ts
src/utils/__test__/: parseFileSize.test.ts
