[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.4", features = [ "path-all", "process-command-api", "dialog-message", "dialog-open", "shell-sidecar", "window-close", "window-set-decorations", "window-set-icon", "window-set-position", "window-set-skip-taskbar", "window-start-dragging", "macos-private-api"] }
image = { version = "0.24" }
infer = "0.13.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
window-vibrancy = "0.3.2"
futures = "0.3"
alphanumeric-sort = "1.5.1"
zip = "0.6"
fast_image_resize = "2.7.0"

mozjpeg = "*"
oxipng = "*"
printpdf = "0.5.3"
pdf-extract = "0.6.5"
nanoid = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
